--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "py"
+name = "ed-optimization"
 version = "0.1.0"
 description = ""
 authors = ["ffekirnew <ffekirnew0808@gmail.com>"]
@@ -14,10 +14,10 @@ websockets = "^14.1"
 rmediator = "^0.2.3"
 sqlalchemy = "^2.0.36"
 psycopg2 = "^2.9.10"
-ed-domain-model = "^0.0.11"
 python-dotenv = "^1.0.1"
 pymongo = "^4.10.1"
 jsons = "^1.6.3"
+ed-domain = "^0.1.14"
 
 
 [tool.poetry.group.test.dependencies]
@@ -31,5 +31,5 @@ black = "^24.10.0"
 ruff = "^0.8.2"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=46.4.0", "wheel"]
+build-backend = "setuptools.build_meta"
