--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,12 +17,13 @@ psycopg2 = "^2.9.10"
 python-dotenv = "^1.0.1"
 pymongo = "^4.10.1"
 jsons = "^1.6.3"
-ed-domain = "^0.2.20"
-ed-infrastructure = "^0.1.7"
+ed-domain = "0.3.10"
+ed-infrastructure = "0.1.18"
 asyncio = "^3.4.3"
-ed-core = "0.1.23"
+ed-core = "^0.2.19"
 requests = "^2.32.3"
 twine = "^6.1.0"
+faststream = {extras = ["rabbit"], version = "^0.5.42"}
 
 
 [tool.poetry.group.test.dependencies]
@@ -34,6 +35,7 @@ pytest = "^8.3.3"
 isort = "^5.13.2"
 black = "^24.10.0"
 ruff = "^0.8.2"
+poetry-plugin-export = "^1.9.0"
 
 [build-system]
 requires = ["setuptools>=46.4.0", "wheel"]
