--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,71 @@
+aio-pika==9.5.5 ; python_version >= "3.12" and python_version < "4.0"
+aiormq==6.8.1 ; python_version >= "3.12" and python_version < "4.0"
 annotated-types==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
 anyio==4.6.2.post1 ; python_version >= "3.12" and python_version < "4.0"
 asyncio==3.4.3 ; python_version >= "3.12" and python_version < "4.0"
 certifi==2024.8.30 ; python_version >= "3.12" and python_version < "4.0"
+cffi==1.17.1 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x" and sys_platform == "linux" and platform_python_implementation != "PyPy"
 charset-normalizer==3.4.2 ; python_version >= "3.12" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.12" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and (platform_system == "Windows" or sys_platform == "win32")
+cryptography==44.0.3 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x" and sys_platform == "linux"
 dnspython==2.7.0 ; python_version >= "3.12" and python_version < "4.0"
-ed-core==0.1.23 ; python_version >= "3.12" and python_version < "4.0"
-ed-domain==0.2.20 ; python_version >= "3.12" and python_version < "4.0"
-ed-infrastructure==0.1.7 ; python_version >= "3.12" and python_version < "4.0"
+docutils==0.21.2 ; python_version >= "3.12" and python_version < "4.0"
+ed-core==0.2.19 ; python_version >= "3.12" and python_version < "4.0"
+ed-domain==0.3.10 ; python_version >= "3.12" and python_version < "4.0"
+ed-infrastructure==0.1.18 ; python_version >= "3.12" and python_version < "4.0"
 email-validator==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
+exceptiongroup==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
+fast-depends==2.4.12 ; python_version >= "3.12" and python_version < "4.0"
 fastapi-cli==0.0.5 ; python_version >= "3.12" and python_version < "4.0"
 fastapi==0.115.5 ; python_version >= "3.12" and python_version < "4.0"
+faststream==0.5.42 ; python_version >= "3.12" and python_version < "4.0"
 greenlet==3.1.1 ; python_version == "3.12" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
 h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
 httpcore==1.0.7 ; python_version >= "3.12" and python_version < "4.0"
 httptools==0.6.4 ; python_version >= "3.12" and python_version < "4.0"
 httpx==0.27.2 ; python_version >= "3.12" and python_version < "4.0"
+id==1.5.0 ; python_version >= "3.12" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.12" and python_version < "4.0"
+jaraco-classes==3.4.0 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x"
+jaraco-context==6.0.1 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x"
+jaraco-functools==4.1.0 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x"
+jeepney==0.9.0 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x" and sys_platform == "linux"
 jinja2==3.1.4 ; python_version >= "3.12" and python_version < "4.0"
 jsons==1.6.3 ; python_version >= "3.12" and python_version < "4.0"
+keyring==25.6.0 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x"
 markdown-it-py==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 markupsafe==3.0.2 ; python_version >= "3.12" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
+more-itertools==10.7.0 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x"
+multidict==6.4.4 ; python_version >= "3.12" and python_version < "4.0"
+nh3==0.2.21 ; python_version >= "3.12" and python_version < "4.0"
+packaging==24.2 ; python_version >= "3.12" and python_version < "4.0"
+pamqp==3.3.0 ; python_version >= "3.12" and python_version < "4.0"
 pika==1.3.2 ; python_version >= "3.12" and python_version < "4.0"
+propcache==0.3.1 ; python_version >= "3.12" and python_version < "4.0"
 psycopg2==2.9.10 ; python_version >= "3.12" and python_version < "4.0"
+pycparser==2.22 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x" and sys_platform == "linux" and platform_python_implementation != "PyPy"
 pydantic-core==2.27.1 ; python_version >= "3.12" and python_version < "4.0"
 pydantic==2.10.1 ; python_version >= "3.12" and python_version < "4.0"
 pygments==2.18.0 ; python_version >= "3.12" and python_version < "4.0"
 pymongo==4.10.1 ; python_version >= "3.12" and python_version < "4.0"
 python-dotenv==1.0.1 ; python_version >= "3.12" and python_version < "4.0"
 python-multipart==0.0.17 ; python_version >= "3.12" and python_version < "4.0"
+pywin32-ctypes==0.2.3 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x" and sys_platform == "win32"
 pyyaml==6.0.2 ; python_version >= "3.12" and python_version < "4.0"
+readme-renderer==44.0 ; python_version >= "3.12" and python_version < "4.0"
+requests-toolbelt==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.12" and python_version < "4.0"
+rfc3986==2.0.0 ; python_version >= "3.12" and python_version < "4.0"
 rich==13.9.4 ; python_version >= "3.12" and python_version < "4.0"
 rmediator==0.2.3 ; python_version >= "3.12" and python_version < "4.0"
+secretstorage==3.3.3 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x" and sys_platform == "linux"
 shellingham==1.5.4 ; python_version >= "3.12" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
 sqlalchemy==2.0.36 ; python_version >= "3.12" and python_version < "4.0"
 starlette==0.41.3 ; python_version >= "3.12" and python_version < "4.0"
+twine==6.1.0 ; python_version >= "3.12" and python_version < "4.0"
 typer==0.13.1 ; python_version >= "3.12" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
 typish==1.9.3 ; python_version >= "3.12" and python_version < "4.0"
@@ -47,3 +74,4 @@ uvicorn==0.32.1 ; python_version >= "3.12" and python_version < "4.0"
 uvloop==0.21.0 ; python_version >= "3.12" and python_version < "4.0" and sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy"
 watchfiles==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 websockets==14.1 ; python_version >= "3.12" and python_version < "4.0"
+yarl==1.20.0 ; python_version >= "3.12" and python_version < "4.0"
