chore: Update deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,8 @@ psycopg2 = "^2.9.10"
 python-dotenv = "^1.0.1"
 pymongo = "^4.10.1"
 jsons = "^1.6.3"
-ed-domain = "0.3.10"
-ed-infrastructure = "0.1.18"
+ed-domain = "^0.3.42"
+ed-infrastructure = "^0.3.8"
 asyncio = "^3.4.3"
 ed-core = "^0.2.19"
 requests = "^2.32.3"
