--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ pika = "^1.3.2"
 fastapi = {extras = ["standard"], version = "^0.115.5"}
 websockets = "^14.1"
 rmediator = "^0.2.3"
-sqlalchemy = "^2.0.36"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
 psycopg2 = "^2.9.10"
 python-dotenv = "^1.0.1"
 pymongo = "^4.10.1"
@@ -20,10 +20,11 @@ jsons = "^1.6.3"
 ed-domain = "^0.3.42"
 ed-infrastructure = "^0.3.8"
 asyncio = "^3.4.3"
-ed-core = "^0.2.19"
+ed-core = "^0.2.27"
 requests = "^2.32.3"
 twine = "^6.1.0"
 faststream = {extras = ["rabbit"], version = "^0.5.42"}
+psycopg = "^3.2.9"
 
 
 [tool.poetry.group.test.dependencies]
