--- a/requirements.txt
+++ b/requirements.txt
@@ -11,16 +11,16 @@ colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and (platf
 cryptography==44.0.3 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x" and sys_platform == "linux"
 dnspython==2.7.0 ; python_version >= "3.12" and python_version < "4.0"
 docutils==0.21.2 ; python_version >= "3.12" and python_version < "4.0"
-ed-core==0.2.19 ; python_version >= "3.12" and python_version < "4.0"
-ed-domain==0.3.10 ; python_version >= "3.12" and python_version < "4.0"
-ed-infrastructure==0.1.18 ; python_version >= "3.12" and python_version < "4.0"
+ed-core==0.2.27 ; python_version >= "3.12" and python_version < "4.0"
+ed-domain==0.3.42 ; python_version >= "3.12" and python_version < "4.0"
+ed-infrastructure==0.3.8 ; python_version >= "3.12" and python_version < "4.0"
 email-validator==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
 exceptiongroup==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
 fast-depends==2.4.12 ; python_version >= "3.12" and python_version < "4.0"
 fastapi-cli==0.0.5 ; python_version >= "3.12" and python_version < "4.0"
 fastapi==0.115.5 ; python_version >= "3.12" and python_version < "4.0"
 faststream==0.5.42 ; python_version >= "3.12" and python_version < "4.0"
-greenlet==3.1.1 ; python_version == "3.12" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
+greenlet==3.1.1 ; python_version >= "3.12" and python_version < "3.14" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
 h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
 httpcore==1.0.7 ; python_version >= "3.12" and python_version < "4.0"
 httptools==0.6.4 ; python_version >= "3.12" and python_version < "4.0"
@@ -45,6 +45,7 @@ pamqp==3.3.0 ; python_version >= "3.12" and python_version < "4.0"
 pika==1.3.2 ; python_version >= "3.12" and python_version < "4.0"
 propcache==0.3.1 ; python_version >= "3.12" and python_version < "4.0"
 psycopg2==2.9.10 ; python_version >= "3.12" and python_version < "4.0"
+psycopg==3.2.9 ; python_version >= "3.12" and python_version < "4.0"
 pycparser==2.22 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x" and sys_platform == "linux" and platform_python_implementation != "PyPy"
 pydantic-core==2.27.1 ; python_version >= "3.12" and python_version < "4.0"
 pydantic==2.10.1 ; python_version >= "3.12" and python_version < "4.0"
@@ -63,12 +64,13 @@ rmediator==0.2.3 ; python_version >= "3.12" and python_version < "4.0"
 secretstorage==3.3.3 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x" and sys_platform == "linux"
 shellingham==1.5.4 ; python_version >= "3.12" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
-sqlalchemy==2.0.36 ; python_version >= "3.12" and python_version < "4.0"
+sqlalchemy==2.0.41 ; python_version >= "3.12" and python_version < "4.0"
 starlette==0.41.3 ; python_version >= "3.12" and python_version < "4.0"
 twine==6.1.0 ; python_version >= "3.12" and python_version < "4.0"
 typer==0.13.1 ; python_version >= "3.12" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
 typish==1.9.3 ; python_version >= "3.12" and python_version < "4.0"
+tzdata==2025.2 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "win32"
 urllib3==2.4.0 ; python_version >= "3.12" and python_version < "4.0"
 uvicorn==0.32.1 ; python_version >= "3.12" and python_version < "4.0"
 uvloop==0.21.0 ; python_version >= "3.12" and python_version < "4.0" and sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy"
