--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 aio-pika==9.5.5 ; python_version >= "3.12" and python_version < "4.0"
+aiohappyeyeballs==2.6.1 ; python_version >= "3.12" and python_version < "4.0"
+aiohttp==3.12.11 ; python_version >= "3.12" and python_version < "4.0"
 aiormq==6.8.1 ; python_version >= "3.12" and python_version < "4.0"
+aiosignal==1.3.2 ; python_version >= "3.12" and python_version < "4.0"
 annotated-types==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
 anyio==4.6.2.post1 ; python_version >= "3.12" and python_version < "4.0"
 asyncio==3.4.3 ; python_version >= "3.12" and python_version < "4.0"
+attrs==25.3.0 ; python_version >= "3.12" and python_version < "4.0"
 certifi==2024.8.30 ; python_version >= "3.12" and python_version < "4.0"
 cffi==1.17.1 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x" and sys_platform == "linux" and platform_python_implementation != "PyPy"
 charset-normalizer==3.4.2 ; python_version >= "3.12" and python_version < "4.0"
@@ -11,7 +15,7 @@ colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and (platf
 cryptography==44.0.3 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x" and sys_platform == "linux"
 dnspython==2.7.0 ; python_version >= "3.12" and python_version < "4.0"
 docutils==0.21.2 ; python_version >= "3.12" and python_version < "4.0"
-ed-core==0.2.27 ; python_version >= "3.12" and python_version < "4.0"
+ed-core==0.2.31 ; python_version >= "3.12" and python_version < "4.0"
 ed-domain==0.3.50 ; python_version >= "3.12" and python_version < "4.0"
 ed-infrastructure==0.3.20 ; python_version >= "3.12" and python_version < "4.0"
 email-validator==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -20,6 +24,7 @@ fast-depends==2.4.12 ; python_version >= "3.12" and python_version < "4.0"
 fastapi-cli==0.0.5 ; python_version >= "3.12" and python_version < "4.0"
 fastapi==0.115.5 ; python_version >= "3.12" and python_version < "4.0"
 faststream==0.5.42 ; python_version >= "3.12" and python_version < "4.0"
+frozenlist==1.6.2 ; python_version >= "3.12" and python_version < "4.0"
 greenlet==3.1.1 ; python_version >= "3.12" and python_version < "3.14" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
 h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
 httpcore==1.0.7 ; python_version >= "3.12" and python_version < "4.0"
