--- a/requirements.txt
+++ b/requirements.txt
@@ -81,3 +81,4 @@ uvloop==0.21.0 ; python_version >= "3.12" and python_version < "4.0" and sys_pla
 watchfiles==1.0.5 ; python_version >= "3.12" and python_version < "4.0"
 websockets==14.2 ; python_version >= "3.12" and python_version < "4.0"
 yarl==1.20.1 ; python_version >= "3.12" and python_version < "4.0"
+ortools
